changes to move kafka and spark config to sparkcommon